# speki-backend

./: Cargo.toml
src/: card.rs  categories.rs  cli.rs  common.rs  lib.rs  media.rs  ml.rs  openai.rs
