[package]
name = "speki-backend"
version = "0.1.2"
edition = "2021"
description = "the backend to speki"
license = "GPL-2.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
dirs = "5.0.1"
cpython = "0.7"
openai = "1.0.0-alpha.13"
tokio = { version = "1", features = ["full"] }



[dependencies.toml]
version = "0.7.3"
default-features = false
features = ["parse", "display"]



[dev-dependencies]
insta = "1.29.0"
